Adding the bus exercise

--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -32,53 +32,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# variables\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Calculate the number of stops.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
-    "# Each item depends on the previous item in the list + in - out.\n",
-    "\n"
+    "# variables\n",
+    "stops = [(5,0),(8,2),(5,3),(7,4)]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 3. Find the maximum occupation of the bus.\n",
-    "\n"
+    "# 1. Calculate the number of stops.\n",
+    "\n",
+    "len(stops)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 8, 5, 7]\n",
+      "[0, 2, 3, 4]\n",
+      "[5, 11, 13, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
+    "# Each item depends on the previous item in the list + in - out.\n",
+    "stops = [(5,0),(8,2),(5,3),(7,4)]\n",
+    "bus_in = []\n",
+    "for i in stops:\n",
+    "    bus_in.append(i [0])\n",
+    "print(bus_in)\n",
+    "\n",
+    "bus_out = []\n",
+    "\n",
+    "for j in stops:\n",
+    "    bus_out.append(j [1])\n",
+    "print(bus_out)\n",
+    "\n",
+    "bus_occupied=[]\n",
+    "total = 0\n",
+    "for x,y in zip(bus_in, bus_out):\n",
+    "    total += x-y\n",
+    "    bus_occupied.append(total)\n",
+    "print(bus_occupied)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3. Find the maximum occupation of the bus.\n",
+    "\n",
+    "max(bus_occupied)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.25"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "\n"
+    "\n",
+    "sum(bus_occupied)/len(bus_occupied)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.645786621588784"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# standard deviation\n",
+    "import statistics\n",
+    "statistics.stdev(bus_occupied)"
    ]
   },
   {
@@ -105,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
