Adding robin-hood + update of the bus exercise

--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -57,44 +57,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4, 5), (5, 7), (2, 2), (-3, 2)]\n",
+      "Robin Hood hit 4 arrows with another arrow!\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
+    "from collections import Counter\n",
+    "points =[(4, 5), (-0, 2), (4, 7), (1, -3), (3, -2), (4, 5),\n",
+    "          (3, 2), (5, 7), (-5, 7), (2, 2), (-4, 5), (0, -2),\n",
+    "          (-4, 7), (-1, 3), (-3, 2), (-4, -5), (-3, 2),\n",
+    "          (5, 7), (5, 7), (2, 2), (9, 9), (-8, -9)]\n",
+    "double_shot = [i for i,j in Counter(points).items() if j>1]\n",
+    "print(double_shot)\n",
+    "print(\"Robin Hood hit\" , len(double_shot) , \"arrows with another arrow!\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4, 5), (4, 7), (4, 5), (3, 2), (5, 7), (2, 2), (5, 7), (5, 7), (2, 2), (9, 9)]\n",
+      "[(-5, 7), (-4, 5), (-4, 7), (-1, 3), (-3, 2), (-3, 2)]\n",
+      "[(-4, -5), (-8, -9)]\n",
+      "[(1, -3), (3, -2)]\n",
+      "[(0, 2), (0, -2)]\n",
+      "In Q1 are 10 arrows. In Q2 are 6 arrows. In Q3 are 2 arrows. In Q4 are  2 arrows. But  2 arrows are on the aix\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Calculate how many arrows have fallen in each quadrant.\n",
-    "\n"
+    "# x and y are positiv Q_I\n",
+    "# x and y are negativ Q_III\n",
+    "# x negative and y positiv Q_II\n",
+    "# x positiv and y negative Q_IV\n",
+    "Q_I=[]\n",
+    "Q_II = []\n",
+    "Q_III = []\n",
+    "Q_IV = []\n",
+    "aix= []\n",
+    "for (x,y) in points:\n",
+    "    if (x < 0) & (y < 0):\n",
+    "        Q_III.append((x,y))\n",
+    "    elif (x == 0) | (y == 0):\n",
+    "        aix.append((x,y))\n",
+    "    elif (x > 0) & (y>0):\n",
+    "        Q_I.append((x,y))\n",
+    "    elif (x < 0) & (y >0):\n",
+    "        Q_II.append((x,y))\n",
+    "    elif (x>0) & (y<0):\n",
+    "        Q_IV.append((x,y))\n",
+    "\n",
+    "print(Q_I)\n",
+    "print(Q_II)        \n",
+    "print(Q_III)\n",
+    "print(Q_IV)\n",
+    "print(aix)\n",
+    "\n",
+    "print(\"In Q1 are\", len(Q_I), \"arrows. In Q2 are\", len(Q_II), \"arrows. In Q3 are\", len(Q_III), \"arrows. In Q4 are \", len(Q_IV), \"arrows. But \", len(aix), \"arrows are on the aix\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.4031242374328485, 2.0, 8.06225774829855, 3.1622776601683795, 3.605551275463989, 6.4031242374328485, 3.605551275463989, 8.602325267042627, 8.602325267042627, 2.8284271247461903, 6.4031242374328485, 2.0, 8.06225774829855, 3.1622776601683795, 3.605551275463989, 6.4031242374328485, 3.605551275463989, 8.602325267042627, 8.602325267042627, 2.8284271247461903, 12.727922061357855, 12.041594578792296]\n",
+      "2.0\n",
+      "The 2 . shot and the 12 . shot were the closest.\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Find the point closest to the center. Calculate its distance to the center\n",
     "# Defining a function that calculates the distance to the center can help.\n",
-    "\n"
+    "distance = []\n",
+    "import math\n",
+    "for x,y in points:\n",
+    "    z = math.sqrt(x**2+y**2)\n",
+    "    distance.append(z)\n",
+    "print(distance)\n",
+    "print(min(distance))\n",
+    "\n",
+    "closest_shot = [ i for i,n in enumerate(distance) if n == min(distance)]\n",
+    "\n",
+    "print(\"The\", closest_shot[0]+1 , \". shot and the\", closest_shot[1]+1, \". shot were the closest.\" )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 143,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 arrows has to pick up in the forest.\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
     "# must be picked up in the forest.\n",
-    "\n"
+    "arrows_forest=[]\n",
+    "for g in distance:\n",
+    "    if g > 9:\n",
+    "        arrows_forest.append(g)\n",
+    "print(len(arrows_forest), \"arrows has to pick up in the forest.\")\n",
+    "\n",
+    "\n",
+    "        \n"
    ]
   },
   {
@@ -121,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
