--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -64,23 +64,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 8, 5, 7]\n",
-      "[0, 2, 3, 4]\n",
-      "[5, 11, 13, 16]\n"
+      "[10, 4, 3, 3, 5, 1, 5, 4, 2]\n",
+      "[0, 1, 5, 4, 1, 5, 8, 6, 3]\n",
+      "[10, 13, 11, 10, 14, 10, 7, 5, 4]\n"
      ]
     }
    ],
    "source": [
     "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
     "# Each item depends on the previous item in the list + in - out.\n",
-    "stops = [(5,0),(8,2),(5,3),(7,4)]\n",
+    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8 ), (4, 6), (2, 3)]\n",
     "bus_in = []\n",
     "for i in stops:\n",
     "    bus_in.append(i [0])\n",
@@ -102,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16"
+       "14"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11.25"
+       "9.333333333333334"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.645786621588784"
+       "3.391164991562634"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
