Adding first part of exercise temperatures

--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -101,33 +101,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "83\n",
+      "[76, 80, 80, 83, 79]\n",
+      "58.833333333333336\n",
+      "[33, 66, 65, 58.833333333333336, 59, 60, 62, 64, 70, 76, 80, 69, 80, 83, 68, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+      "[91.4, 150.8, 149.0, 137.9, 138.2, 140.0, 143.6, 147.2, 158.0, 168.8, 176.0, 156.2, 176.0, 181.4, 154.4, 174.2, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n"
+     ]
+    }
+   ],
    "source": [
     "# assign a variable to the list of temperatures\n",
-    "\n",
+    "temperatures_C = [33,66,65,0,59,60,62,64,70,76,80,69,80,83,68,79,61,53,50,49,53,48,45,39]\n",
     "# 1. Calculate the minimum of the list and print the value using print()\n",
-    "\n",
+    "min(temperatures_C)\n",
+    "print(min(temperatures_C))\n",
     "\n",
     "# 2. Calculate the maximum of the list and print the value using print()\n",
-    "\n",
+    "z = max(temperatures_C)\n",
+    "print(z)\n",
     "\n",
     "# 3. Items in the list that are greater than 70ºC and print the result\n",
-    "\n",
-    "\n",
+    "more_70 = []\n",
+    "for i in temperatures_C:\n",
+    "    if i > (70):\n",
+    "        more_70.append(i)\n",
+    "print(more_70)\n",
+    "   \n",
+    "    \n",
     "# 4. Calculate the mean temperature throughout the day and print the result\n",
-    "\n",
+    "mean_temperature = sum(temperatures_C)/len(temperatures_C)\n",
+    "print(mean_temperature)\n",
     "\n",
     "# 5.1 Solve the fault in the sensor by estimating a value\n",
+    "temperatures_C[3] = mean_temperature\n",
     "\n",
     "\n",
     "# 5.2 Update of the estimated value at 03:00 on the list\n",
-    "\n",
+    "print(temperatures_C)\n",
     "\n",
     "\n",
     "# Bonus: convert the list of ºC to ºFarenheit\n",
-    "\n"
+    "temperatures_F =[]\n",
+    "for i in temperatures_C:\n",
+    "    F = ((i*9/5)+32)\n",
+    "    temperatures_F.append(F)\n",
+    "print(temperatures_F)"
    ]
   },
   {
@@ -227,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
