Adding the second part of the exercise temperature

--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -170,12 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Print True or False depending on whether you would change the cooling system or not\n",
-    "\n"
+    "\n",
+    "Change_coolingsystem = True"
    ]
   },
   {
@@ -191,41 +192,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 9, 10, 12, 13, 15]\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. We want the hours (not the temperatures) whose temperature exceeds 70ºC\n",
-    "\n"
+    "hours_more_70 = []\n",
+    "temperatures_C = [33,66,65,58.33,59,60,62,64,70,76,80,69,80,83,68,79,61,53,50,49,53,48, 45, 39]\n",
+    "hours_more_70 = [i for i,n in enumerate(temperatures_C) if n >= 70]\n",
+    "print(hours_more_70)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Condition that those hours are more than 4 consecutive and consecutive, not simply the sum of the whole set. Is this condition met?\n",
-    "\n"
+    "any(j == i+1 for i,j in zip(hours_more_70, hours_more_70[i:i+4]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61.263749999999995\n",
+      "142.3125\n",
+      "The average of the list F is nine-fifths of the average of the list C + 32.\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Average of each of the lists (ºC and ºF). How they relate?\n",
-    "\n"
+    "temperatures_F = [91.4, 150.8, 149.0, 137.9, 138.2, 140.0, 143.6, 147.2, 158.0, 168.8, 176.0, 156.2, 176.0, 181.4, 154.4, 174.2, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n",
+    "avrg_C = sum(temperatures_C)/len(temperatures_C)\n",
+    "avrg_F = sum(temperatures_F)/len(temperatures_F)\n",
+    "print(avrg_C)\n",
+    "print(avrg_F)\n",
+    "\n",
+    "if int((avrg_C*9/5)+32) == int(avrg_F):\n",
+    "    print(\"The average of the list F is nine-fifths of the average of the list C + 32.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.345670788849388\n",
+      "24.014258671989385\n",
+      "[-58.400000000000006, -84.80000000000001, -84.0, -79.57000000000001, -79.19999999999999, -80.0, -81.6, -83.19999999999999, -88.0, -92.80000000000001, -96.0, -87.19999999999999, -96.0, -98.4, -86.4, -95.19999999999999, -80.80000000000001, -74.4, -72.0, -71.2, -74.4, -70.4, -68.0, -63.2]\n",
+      "10.669476704701777\n",
+      "Standard deviation of the difference between each element in the list temperatures_C and temperatures_F is the difference between the standard deviation of the list temperatures_C and temperatures_F So they are equivalent. \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. Standard deviation of each of the lists. How they relate?\n",
+    "import statistics\n",
+    "c = statistics.stdev(temperatures_C)\n",
+    "f = statistics.stdev(temperatures_F)\n",
+    "print(c)\n",
+    "print(f)\n",
+    "\n",
+    "difference=[]\n",
+    "for i,j in zip(temperatures_C,temperatures_F):\n",
+    "    g = i-j\n",
+    "    difference.append(g)\n",
+    "print(difference)\n",
+    "d = statistics.stdev(difference)\n",
+    "print(d)\n",
+    "\n",
+    "if int(c+d) == int(f):\n",
+    "    print(\"Standard deviation of the difference between each element in the list temperatures_C and temperatures_F is the difference between the standard deviation of the list temperatures_C and temperatures_F So they are equivalent. \")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. Standard deviation of each of the lists. How they relate?\n",
     "\n"
    ]
   },
