Adding bonus duel and the first solutions of paper-stone-scissors

--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -152,9 +152,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Fireball', 50), ('Lightning bolt', 40), ('Magic arrow', 10), ('Black Tentacles', 25), ('Contagion', 45)]\n",
+      "[50, 40, 40, 10, 50, 10, 40, 50, 10, 50]\n",
+      "[45, 45, 25, 50, 25, 40, 10, 45, 10, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Spells now have a name and there is a dictionary that relates that name to a power.\n",
     "# variables\n",
@@ -170,12 +180,28 @@
     "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
     "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Magic arrow', 'Fireball']\n",
     "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
-    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']"
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "\n",
+    "power=[(i,j) for i,j in POWER.items()]\n",
+    "print(power)\n",
+    "g_score = []\n",
+    "for z in gandalf:\n",
+    "    for i,j in power:\n",
+    "        if z == i:\n",
+    "            g_score.append(j)\n",
+    "print(g_score)\n",
+    "        \n",
+    "s_score = []\n",
+    "for z in saruman:\n",
+    "    for i,j in power:\n",
+    "        if z ==i:\n",
+    "            s_score.append(j)\n",
+    "print(s_score)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,41 +211,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 1, 0, 1, 0, 1, 1, 0, 1]\n",
+      "[0, 1, 0, 1, 0, 1, 0, 0, 0, 0]\n",
+      "[0, 2, 4, 6, 7, 9]\n",
+      "Gandalf looses.\n",
+      "Saruman looses.\n",
+      "nobody won\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
     "\n",
     "\n",
     "# Execution of spell clashes\n",
-    "\n",
-    "\n",
+    "wins_g =[]\n",
+    "wins_s=[]\n",
+    "for g,s in zip(g_score, s_score):\n",
+    "    if g>s:\n",
+    "        wins_g.append(1)\n",
+    "        wins_s.append(0)\n",
+    "    elif g<s:\n",
+    "        wins_s.append(1)\n",
+    "        wins_g.append(0)\n",
+    "    elif g == s:\n",
+    "        wins_s.append(0)\n",
+    "        wins_g.append(0)\n",
+    "print(wins_g)\n",
+    "print(wins_s)\n",
+    "   \n",
+    "los= []\n",
+    "los=[q for q,p in enumerate(wins_g) if p ==1]\n",
+    "print(los)\n",
     "\n",
     "# check for 3 wins in a row\n",
     "\n",
+    "if wins_g[0]+wins_g[1]+wins_g[2] == 2 | wins_g[1]+wins_g[2]+wins_g[3] == 2 | wins_g[2]+wins_g[3]+wins_g[4] == 3 |wins_g[3]+wins_g[4]+wins_g[5] == 3 | wins_g[4]+wins_g[5]+wins_g[6] == 3 | wins_g[5]+wins_g[6]+wins_g[7] == 3 | wins_g[6]+wins_g[7]+wins_g[8] == 3 | wins_g[7]+wins_g[8]+wins_g[9] == 3:\n",
+    "        print(\"Gandalf wins\")\n",
+    "else:\n",
+    "    print(\"Gandalf looses.\")\n",
+    "    \n",
+    "if wins_s[0]+wins_s[1]+wins_s[2] == 2 | wins_s[1]+wins_s[2]+wins_s[3] == 2 | wins_s[2]+wins_s[3]+wins_s[4] == 3 |wins_s[3]+wins_s[4]+wins_s[5] == 3 | wins_s[4]+wins_s[5]+wins_s[6] == 3 | wins_s[5]+wins_s[6]+wins_s[7] == 3 | wins_s[6]+wins_s[7]+wins_s[8] == 3 | wins_s[7]+wins_s[8]+wins_s[9] == 3:\n",
+    "        print(\"Saruman wins\")\n",
+    "else:\n",
+    "    print(\"Saruman looses.\")  \n",
     "\n",
-    "# check the winner\n"
+    "\n",
+    "\n",
+    "# check the winner\n",
+    "print(\"nobody won\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Average score of Gandalf is: 30.5\n",
+      "The Average score of Saruman is: 35.0\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Average of each of the spell lists.\n",
+    "\n",
+    "print(\"The Average score of Gandalf is:\" ,sum(s_score)/len(s_score))\n",
+    "print(\"The Average score of Saruman is:\", sum(g_score)/len(g_score))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The standard deviation of Gandalf is:  17.795130420052185\n",
+      "The standard deviation of Saruman is:  16.40629960309962\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the spell lists.\n",
-    "\n"
+    "import statistics\n",
+    "print(\"The standard deviation of Gandalf is: \", statistics.stdev(g_score))\n",
+    "print(\"The standard deviation of Saruman is: \", statistics.stdev(s_score))\n"
    ]
   },
   {
