--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "# Rock Paper Scissors\n",
@@ -25,33 +25,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
-    "\n",
+    "import random\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
-    "\n",
+    "options =[\"stone\",\"paper\",\"scissors\"]\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
-    "\n",
+    "max_game =[5]\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
-    "\n",
+    "win_to_win = max_game\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
+    "m = (random.choice(options))\n",
     "\n",
     "\n",
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
     "\n",
+    "def humanMove():\n",
+    "    while True:\n",
+    "        print(\"stone (1), paper(2), scissors(3)\")\n",
+    "        choice = input(\"Make your choice: \")\n",
+    "        if choice in options:\n",
+    "            return \"stone\"\n",
+    "        print(\"Invalid input. Please try it again\")\n",
+    "    \n",
+    "    \n",
+    "   \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "      \n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "\n",
-    "    \n",
+    "        \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
     "\n",
@@ -71,8 +86,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Bonus: Stone, paper, scissors, lizard, spock\n",
     "\n",
@@ -93,13 +110,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the choice function of the random module\n",
+    "def _init_(self, mscore, hscore):\n",
+    "    self.mscore = mscore\n",
+    "    self.hscore = hscore\n",
+    "print(\"Machine: \", self.mscore)\n",
+    "print(\"You: \",self.hscore)\n",
+    "\n",
+    "def _init_(self, mscore, hscore):\n",
+    "    self.mscore = mscore\n",
+    "    self.hscore = hscore\n",
     "\n",
     "\n",
+    "    if (m,h) == (\"stone\",\"scissors\"):\n",
+    "        print(\"stone breaks scissors\")\n",
+    "        print(\"Machine wins\")\n",
+    "        mscore = mscore+1\n",
+    "    elif (h,m) == (\"stone\", \"scissors\"):\n",
+    "        print(\"stone breaks scissors\")\n",
+    "        print(\"You win\")\n",
+    "        hscore = hscore+2\n",
+    "    elif (h,m) == (\"scissors\", \"paper\"):\n",
+    "        print(\"scissors cuts paper\")\n",
+    "        print(\"You win\")\n",
+    "        hscore = hscore +2\n",
+    "    elif (m,h) == (\"scissors\", \"paper\"):\n",
+    "        print(\"scissors cuts paper\")\n",
+    "        print(\"Machine wins\")\n",
+    "        mscore = mscore+1\n",
+    "    elif (h,m) == (\"paper\" , \"stone\"):\n",
+    "        print(\"stone covers paper\")\n",
+    "        print(\"You win\")\n",
+    "        hscore = hscore +2\n",
+    "    elif (m,h) == (\"paper\" , \"stone\"):\n",
+    "        print(\"stone covers paper\")\n",
+    "        print(\"Machine wins\")\n",
+    "        mscore = mscore +1\n",
+    "    else:\n",
+    "        print(\"Tie\")\n",
     "# Define a function that asks for an odd number on the keyboard, until it is not valid\n",
     "# will keep asking\n",
     "\n",
@@ -171,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
