Update of temperatures

--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -213,20 +213,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "We do not need to change the cooling system.\n"
      ]
     }
    ],
    "source": [
     "# 2. Condition that those hours are more than 4 consecutive and consecutive, not simply the sum of the whole set. Is this condition met?\n",
-    "any(j == i+1 for i,j in zip(hours_more_70, hours_more_70[i:i+4]))\n"
+    "if hours_more_70[0]+1 == hours_more_70[1] and hours_more_70[1]+1 == hours_more_70[2] and hours_more_70[2]+1 == hours_more_70[3] and hours_more_70[3]+1 == hours_more_70[4]:\n",
+    "    print(\"Please change the cooling system.\")\n",
+    "elif hours_more_70[1]+1 == hours_more_70[2] and hours_more_70[2]+1 == hours_more_70[3] and hours_more_70[3]+1 == hours_more_70[4] and hours_more_70[4]+1 == hours_more_70[5]:\n",
+    "    print(\"Please change the cooling system.\")\n",
+    "elif hours_more_70[2]+1 == hours_more_70[3] and hours_more_70[3]+1 == hours_more_70[4] and hours_more_70[4]+1 == hours_more_70[5] and hours_more_70[5]+1 == hours_more_70[6]:\n",
+    "    print(\"Please change the cooling system.\")\n",
+    "else:\n",
+    "    print(\"We do not need to change the cooling system.\")"
    ]
   },
   {
