Add Exercise stone-scissors-paper, not yet finished

--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Rock Paper Scissors\n",
@@ -25,9 +25,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your choice: paper\n",
+      "You: paper Machine: stone\n",
+      "stone covers paper\n",
+      "You win\n",
+      "You: 2 Machine: 0\n",
+      "Enter your choice: paper\n",
+      "You: paper Machine: paper\n",
+      "Tie\n",
+      "You: 0 Machine: 0\n",
+      "Enter your choice: paper\n",
+      "You: paper Machine: stone\n",
+      "stone covers paper\n",
+      "You win\n",
+      "You: 2 Machine: 0\n",
+      "Enter your choice: paper\n",
+      "You: paper Machine: scissors\n",
+      "scissors cuts paper\n",
+      "Machine wins\n",
+      "You: 0 Machine: 1\n",
+      "Enter your choice: paper\n",
+      "You: paper Machine: scissors\n",
+      "scissors cuts paper\n",
+      "Machine wins\n",
+      "You: 0 Machine: 1\n",
+      "Finish\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
@@ -41,34 +73,83 @@
     "win_to_win = max_game\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "m = (random.choice(options))\n",
+    "\n",
+    "    \n",
+    "    \n",
     "\n",
     "\n",
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
-    "\n",
-    "def humanMove():\n",
-    "    while True:\n",
-    "        print(\"stone (1), paper(2), scissors(3)\")\n",
-    "        choice = input(\"Make your choice: \")\n",
-    "        if choice in options:\n",
-    "            return \"stone\"\n",
-    "        print(\"Invalid input. Please try it again\")\n",
+    "def Game():\n",
+    "    hscore = 0\n",
+    "    mscore = 0    \n",
+    "    m = (random.choice(options))\n",
+    "    h = input(\"Enter your choice: \")\n",
+    "    while h != \"stone\" and h != \"paper\" and h != \"scissors\":\n",
+    "        if h != \"stone\"and h != \"paper\" and h != \"scissors\":\n",
+    "            print(\"Invalid Input!\")\n",
+    "            h = input(\"Enter your choice: \")\n",
+    "        elif h == \"stone\" or h == \"paper\" or h == \"scissors\":\n",
+    "            print(\"You: \",h, \"Machine:\", m)\n",
+    "            break\n",
+    "    else:\n",
+    "        print(\"You:\",h,\"Machine:\", m)\n",
+    "        \n",
     "    \n",
+    "    if (m,h) == (\"stone\",\"scissors\"):\n",
+    "        print(\"stone breaks scissors\")\n",
+    "        print(\"Machine wins\")\n",
+    "        mscore += 1\n",
+    "        hscore += 0\n",
+    "    elif (h,m) == (\"stone\", \"scissors\"):\n",
+    "        print(\"stone breaks scissors\")\n",
+    "        print(\"You win\")\n",
+    "        mscore += 0\n",
+    "        hscore += 2\n",
+    "    elif (h,m) == (\"scissors\", \"paper\"):\n",
+    "        print(\"scissors cuts paper\")\n",
+    "        print(\"You win\")\n",
+    "        mscore += 0\n",
+    "        hscore += 2\n",
+    "    elif (m,h) == (\"scissors\", \"paper\"):\n",
+    "        print(\"scissors cuts paper\")\n",
+    "        print(\"Machine wins\")\n",
+    "        mscore += 1\n",
+    "        hscore += 0\n",
+    "    elif (h,m) == (\"paper\" , \"stone\"):\n",
+    "        print(\"stone covers paper\")\n",
+    "        print(\"You win\")\n",
+    "        mscore += 0\n",
+    "        hscore += 2\n",
+    "    elif (m,h) == (\"paper\" , \"stone\"):\n",
+    "        print(\"stone covers paper\")\n",
+    "        print(\"Machine wins\")\n",
+    "        mscore += 1\n",
+    "        hscore += 0\n",
+    "    else:\n",
+    "        print(\"Tie\")\n",
+    "        mscore += 0\n",
+    "        hscore += 0\n",
+    "    print(\"You:\", hscore, \"Machine:\",mscore )\n",
+    " \n",
     "    \n",
-    "   \n",
-    "    \n",
-    "    \n",
-    "\n",
     "      \n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
+    "x= 0\n",
+    "while True:\n",
+    "    x += 1\n",
+    "    if x < 6:\n",
+    "        Game()\n",
+    "    elif x == 6:\n",
+    "        print(\"Finish\")\n",
+    "        break\n",
     "\n",
-    "        \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
+    "\n",
     "\n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
@@ -86,10 +167,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Bonus: Stone, paper, scissors, lizard, spock\n",
     "\n",
@@ -110,52 +189,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your choice: rocks\n",
+      "Invalid Input!\n",
+      "Enter your choice: stone\n",
+      "You: stone Machine: stone\n",
+      "Tie\n",
+      "Machine: [0]\n",
+      "You [0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
-    "def _init_(self, mscore, hscore):\n",
-    "    self.mscore = mscore\n",
-    "    self.hscore = hscore\n",
-    "print(\"Machine: \", self.mscore)\n",
-    "print(\"You: \",self.hscore)\n",
     "\n",
-    "def _init_(self, mscore, hscore):\n",
-    "    self.mscore = mscore\n",
-    "    self.hscore = hscore\n",
+    "        \n",
+    "        \n",
+    "        \n",
     "\n",
-    "\n",
-    "    if (m,h) == (\"stone\",\"scissors\"):\n",
-    "        print(\"stone breaks scissors\")\n",
-    "        print(\"Machine wins\")\n",
-    "        mscore = mscore+1\n",
-    "    elif (h,m) == (\"stone\", \"scissors\"):\n",
-    "        print(\"stone breaks scissors\")\n",
-    "        print(\"You win\")\n",
-    "        hscore = hscore+2\n",
-    "    elif (h,m) == (\"scissors\", \"paper\"):\n",
-    "        print(\"scissors cuts paper\")\n",
-    "        print(\"You win\")\n",
-    "        hscore = hscore +2\n",
-    "    elif (m,h) == (\"scissors\", \"paper\"):\n",
-    "        print(\"scissors cuts paper\")\n",
-    "        print(\"Machine wins\")\n",
-    "        mscore = mscore+1\n",
-    "    elif (h,m) == (\"paper\" , \"stone\"):\n",
-    "        print(\"stone covers paper\")\n",
-    "        print(\"You win\")\n",
-    "        hscore = hscore +2\n",
-    "    elif (m,h) == (\"paper\" , \"stone\"):\n",
-    "        print(\"stone covers paper\")\n",
-    "        print(\"Machine wins\")\n",
-    "        mscore = mscore +1\n",
-    "    else:\n",
-    "        print(\"Tie\")\n",
     "# Define a function that asks for an odd number on the keyboard, until it is not valid\n",
     "# will keep asking\n",
-    "\n",
-    "\n",
+    "import random\n",
+    "m = (random.choice(options))\n",
+    "h = input(\"Enter your choice: \")\n",
+    "while h != \"stone\" and h != \"paper\" and h != \"scissors\":\n",
+    "    if h != \"stone\"and h != \"paper\" and h != \"scissors\":\n",
+    "        print(\"Invalid Input!\")\n",
+    "        h = input(\"Enter your choice: \")\n",
+    "    elif h == \"stone\" or h == \"paper\" or h == \"scissors\":\n",
+    "        print(\"You: \",h, \"Machine:\", m)\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"You:\",h,\"Machine:\", m)\n",
+    "        \n",
+    "mscore = []\n",
+    "hscore=[]\n",
+    "if (m,h) == (\"stone\",\"scissors\"):\n",
+    "    print(\"stone breaks scissors\")\n",
+    "    print(\"Machine wins\")\n",
+    "    mscore.append(1)\n",
+    "    hscore.append(0)\n",
+    "elif (h,m) == (\"stone\", \"scissors\"):\n",
+    "    print(\"stone breaks scissors\")\n",
+    "    print(\"You win\")\n",
+    "    mscore.append(0)\n",
+    "    hscore.append(2)\n",
+    "elif (h,m) == (\"scissors\", \"paper\"):\n",
+    "    print(\"scissors cuts paper\")\n",
+    "    print(\"You win\")\n",
+    "    mscore.append(0)\n",
+    "    hscore.append(2)\n",
+    "elif (m,h) == (\"scissors\", \"paper\"):\n",
+    "    print(\"scissors cuts paper\")\n",
+    "    print(\"Machine wins\")\n",
+    "    mscore.append(1)\n",
+    "    hscore.append(0)\n",
+    "elif (h,m) == (\"paper\" , \"stone\"):\n",
+    "    print(\"stone covers paper\")\n",
+    "    print(\"You win\")\n",
+    "    mscore.append(0)\n",
+    "    hscore.append(2)\n",
+    "elif (m,h) == (\"paper\" , \"stone\"):\n",
+    "    print(\"stone covers paper\")\n",
+    "    print(\"Machine wins\")\n",
+    "    mscore.append(1)\n",
+    "    hscore.append(0)\n",
+    "else:\n",
+    "    print(\"Tie\")\n",
+    "    mscore.append(0)\n",
+    "    hscore.append(0)\n",
+    "print(\"Machine:\",mscore)\n",
+    "print(\"You\",hscore)\n",
     "# Assign a list of 5 possible options.\n",
     "\n",
     "\n",
