--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,21 +20,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 13\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
+    "well_height=125\n",
+    "daily_advance=30\n",
+    "night_retreat=20\n",
+    "accumulated_distance=[]\n",
     "\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
+    "days=0\n",
     "\n",
     "# Write the code that solves the problem\n",
+    "while sum(accumulated_distance)<= well_height:\n",
+    "    accumulated_distance.append((daily_advance-night_retreat))\n",
+    "    days+=1\n",
+    "        \n",
     "\n",
+    "# Print the result with print('Days =', days)\n",
+    "print(\"Days =\", days)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "well_height=125\n",
+    "daily_advance=30\n",
+    "night_retreat=20\n",
+    "accumulated_distance=0\n",
+    "days=0\n",
     "\n",
-    "# Print the result with print('Days =', days)\n"
+    "while accumulated_distance <= well_height:\n",
+    "    if True:\n",
+    "        accumulated_distance+=(daily_advance-night_retreat)\n",
+    "        days+=1\n",
+    "    else:\n",
+    "        break\n",
+    "        \n",
+    "print(\"Days =\",days)"
    ]
   },
   {
@@ -69,34 +115,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 6\n",
+      "Max : 77\n",
+      "Min : 12\n",
+      "Average progress = 70\n",
+      "Standard deviation: 18.037839015903106\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
+    "well_height=125\n",
+    "daily_advance=[30,20,33,77,44,45,23,45,12,34,55]\n",
+    "night_retreat=20\n",
+    "accumulated_distance=0\n",
     "\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
+    "days=0\n",
     "\n",
     "# Write the code that solves the problem\n",
-    "\n",
+    "while accumulated_distance<=well_height:\n",
+    "    if True:\n",
+    "        accumulated_distance+=(daily_advance[days]-night_retreat)\n",
+    "        days+=1\n",
+    "    else:\n",
+    "        break\n",
     "\n",
     "\n",
     "# Print the result with print('Days =', days)\n",
-    "\n",
+    "print(\"Days =\", days)\n",
     "\n",
     "# What is its maximum displacement in a day? And its minimum?\n",
     "\n",
-    "\n",
+    "print(\"Max :\", max(daily_advance))\n",
+    "print(\"Min :\", min(daily_advance))\n",
     "\n",
     "# What is its average progress?\n",
     "\n",
+    "print(\"Average progress =\", round(sum(daily_advance)/days))\n",
     "\n",
     "# What is the standard deviation of your displacement during the day?\n",
+    "\n",
+    "\n",
+    "mean=sum(daily_advance)/len(daily_advance)\n",
+    "varience=sum((((i-night_retreat)-mean)**2)for i in daily_advance[0:days])/len(daily_advance) \n",
+    "\n",
+    "st_dev=varience ** 0.5\n",
+    "\n",
+    "print(\"Standard deviation:\",st_dev)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -122,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
