--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,49 +52,154 @@
     "points = [(4, 5), (-0, 2), (4, 7), (1, -3), (3, -2), (4, 5),\n",
     "          (3, 2), (5, 7), (-5, 7), (2, 2), (-4, 5), (0, -2),\n",
     "          (-4, 7), (-1, 3), (-3, 2), (-4, -5), (-3, 2),\n",
-    "          (5, 7), (5, 7), (2, 2), (9, 9), (-8, -9)]"
+    "          (5, 7), (5, 7), (2, 2), (9, 9), (-8, -9)]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Robin Hood gets [(4, 5), (-3, 2), (5, 7), (5, 7), (2, 2)]\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
-    "\n"
+    "unique=set()\n",
+    "robin=[]\n",
+    "\n",
+    "for (x,y) in points:\n",
+    "    if (x,y) not in unique:\n",
+    "        unique.add((x,y))\n",
+    "    else:\n",
+    "        robin.append((x,y))\n",
+    "        \n",
+    "print(\"Robin Hood gets\",robin)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1: [(4, 5), (4, 7), (4, 5), (3, 2), (5, 7), (2, 2), (5, 7), (5, 7), (2, 2), (9, 9)]\n",
+      "Q2: [(-5, 7), (-4, 5), (-4, 7), (-1, 3), (-3, 2), (-3, 2)]\n",
+      "Q3: [(-4, -5), (-8, -9)]\n",
+      "Q4: [(1, -3), (3, -2)]\n",
+      "[(0, 2), (0, -2)] lay between quarants.\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Calculate how many arrows have fallen in each quadrant.\n",
-    "\n"
+    "\n",
+    "q1=[]\n",
+    "q2=[]\n",
+    "q3=[]\n",
+    "q4=[]\n",
+    "between_quarant=[]\n",
+    "\n",
+    "for (x,y) in points:\n",
+    "    if x > 0 and y > 0:\n",
+    "        q1.append((x,y))\n",
+    "    elif x <0 and y > 0:\n",
+    "        q2.append((x,y))\n",
+    "    elif x <0 and y < 0:\n",
+    "        q3.append((x,y))\n",
+    "    elif x >0 and y < 0:\n",
+    "        q4.append((x,y))\n",
+    "    else :\n",
+    "        between_quarant.append((x,y))\n",
+    "\n",
+    "\n",
+    "print(\"Q1:\",q1)\n",
+    "print(\"Q2:\",q2)\n",
+    "print(\"Q3:\",q3)\n",
+    "print(\"Q4:\",q4)\n",
+    "print(between_quarant, \"lay between quarants.\")\n",
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Closest to centre: (0, 2)\n",
+      "Distance: 2.0\n",
+      "Closest to centre: (0, -2)\n",
+      "Distance: 2.0\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Find the point closest to the center. Calculate its distance to the center\n",
     "# Defining a function that calculates the distance to the center can help.\n",
+    "\n",
+    "points = [(4, 5), (-0, 2), (4, 7), (1, -3), (3, -2), (4, 5),\n",
+    "          (3, 2), (5, 7), (-5, 7), (2, 2), (-4, 5), (0, -2),\n",
+    "          (-4, 7), (-1, 3), (-3, 2), (-4, -5), (-3, 2),\n",
+    "          (5, 7), (5, 7), (2, 2), (9, 9), (-8, -9)]\n",
+    "\n",
+    "\n",
+    "def find_d(x,y):\n",
+    "    distance=(x**2+y**2)**0.5\n",
+    "    return round(distance,2)\n",
+    "\n",
+    "for x,y in points:\n",
+    "    if x==0 or y==0:\n",
+    "        print(\"Closest to centre:\",(x,y)) \n",
+    "        print(\"Distance:\",find_d(x,y))\n",
+    "\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arrows hit target: [(4, 5), (0, 2), (4, 7), (1, -3), (3, -2), (4, 5), (3, 2), (5, 7), (-5, 7), (2, 2), (-4, 5), (0, -2), (-4, 7), (-1, 3), (-3, 2), (-4, -5), (-3, 2), (5, 7), (5, 7), (2, 2)] \n",
+      "\n",
+      "20 out of 22 arrows must be picked up in the forest.\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
     "# must be picked up in the forest.\n",
-    "\n"
+    "\n",
+    "target=[]\n",
+    "\n",
+    "for x,y in points:\n",
+    "    all_d.append(find_d(x,y))\n",
+    "    if find_d(x,y) < 9:\n",
+    "        target.append((x,y))\n",
+    "        \n",
+    "print(\"Arrows hit target:\", target,\"\\n\")\n",
+    "print(len(target),'out of',len(points), \"arrows must be picked up in the forest.\")\n"
    ]
   },
   {
@@ -121,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
